[package]
name = "tgbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.9", features = ["macros", "auto-send"] }
teloxide-macros = { version = "0.6.1", optional = true }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
rand = "0.7.0"
hex = "0.4.3"
serde_json = "1.0"
dptree = "0.2.1"
ed25519-dalek = "1"

[features]
macros = ["teloxide-macros"]
ctrlc_handler = ["tokio/signal"]
