[package]
name = "tgbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.9", features = ["macros", "auto-send"] }
teloxide-macros = { version = "0.6.1", optional = true }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
rand = "0.7.0"
#rand_core = "*"
hex = "0.4.3"
serde_json = "1.0"
dptree = "0.2.1"
ed25519-dalek = "1"
# sp-core = "6.0.0"
# substrate-bip39 = "0.4.4"
schnorrkel = "0.10.2"
lazy_static = "1.4.0"
async_once = "0.2.6"
serde = "1.0.137"
r2d2 = "0.8"
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4"
diesel_pg_tester = "0.5.1"
once_cell = "1.10.0"
anyhow = "1.0.56"
async-trait = "0.1.53"

[dependencies.rand_core]
version = "0.6.2"
default-features = false

[features]
macros = ["teloxide-macros"]
ctrlc_handler = ["tokio/signal"]
